--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script
+		<!-- <script
 			async
 			defer
 			src="https://static.cdn.prismic.io/prismic.js?new=true&repo=fullkit-prismic"
-		></script>
+		></script> -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
